--- a/FDMTest/FDMTest.csproj
+++ b/FDMTest/FDMTest.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Matrix33Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuaternionTest.cs" />
     <Compile Include="RealValueTest.cs" />
     <Compile Include="Vector3Test.cs" />
   </ItemGroup>
